--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,5 +9,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name : Say Hello
-      run: echo "Hello"
+      - name: Say Hello
+      - run: echo "Hello"
