--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,3 +52,26 @@ jobs:
       
       - name: Run typecheck
         run: python -m tox -e typecheck
+
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python:
+          - version: "3.9"
+            toxenv: "py39"
+          - version:  "3.8" 
+            toxenv: "py38"
+    setps:
+      - uses: actions/checkout@v3
+
+      - uses: actions/setup-python@v4.0.0
+        with:
+          python-version: ${{ matrix.python.version }}
+      
+      - name: Install tox
+        run: python -m pip install tox
+      
+      - name: Run pytest
+        run: tox -e ${{ matrix.python.toxenv }}
