--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,7 +63,7 @@ jobs:
             toxenv: "py39"
           - version:  "3.8" 
             toxenv: "py38"
-    setps:
+    steps:
       - uses: actions/checkout@v3
 
       - uses: actions/setup-python@v4.0.0
